# language-glsl

./: LICENSE  README.md  check-list.txt  default.nix  glsl-compact.hs  glsl-pprint.hs  language-glsl.cabal  shell.nix
Language/: GLSL.hs
Language/GLSL/: Parser.hs  Pretty.hs  Syntax.hs  Tests.hs
glsl/: sample-01.glsl
nix/: contents.nix  overlay.nix  overlays.nix
tests/: Tests.hs
